--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="./resources/css/style.css">
+        <link rel="stylesheet" href="https://thatstupiddeer.github.io/style.css">
         <title>Vamir Breeding Farm</title>
     </head>
 
@@ -90,3 +90,5 @@
     </main>
 
     <footer class="bottom"></footer>
+    
+    
